# CPP_projects

./: CMakeLists.txt  environment.yml
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: conf.py  index.rst
include/: expression.h  flexible_container.h  is_raw_pointer.h  mytype.h  pair.h  person.h  smart.h  split.h  students.h  sum.h  transform.h
src/: CMakeLists.txt  casting.cpp  doubly_linked_list.cpp  doubly_linked_list.h  dyn_array.cpp  dyn_array.h  expression.cpp  inject.cpp  main.cpp  person.cpp  pointer_arithmetic.cpp  smart.cpp  split.cpp  students.cpp  students.h  test_dyn  test_dyn.cpp  test_student
tests/: CMakeLists.txt  test.cpp  test_arr.cpp  test_doubly_linked_list.cpp  test_expressions.cpp  tests.cpp
